adjusted copy in sections, adjusted section size, fixed IO issues, changed blog layout, aligned projects

--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -137,17 +137,6 @@
   @include setFont(1.6rem, normal, $darkGrey, 1px);
 }
 
-.aboutSection .subSectionHeading::after {
-  background-color: $mainColor;
-  border-radius: 100px;
-  content: '';
-  height: calc(100% + 20px);
-  left: -80px;
-  position: absolute;
-  top: -10px;
-  width: 80%;
-  z-index: -10;
-}
 
 @media (max-width: 1400px) {
   .symbolsContainer {
@@ -186,11 +175,6 @@
   .symbolContainer:hover > .iconHeading {
     letter-spacing: 5px;
     transform: translateX(10px);
-  }
-
-  .aboutSection .subSectionHeading::after {
-    min-width: 325px;
-    width: 90%;
   }
 }
 
