--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -4,6 +4,7 @@
   background-color: $darkGrey;
   border-bottom: 2px solid $white;
   height: 100px;
+  margin-bottom: 50px;
   padding: 0 20px;
   width: 100%;
 }
@@ -21,11 +22,15 @@
   text-align: right;
 }
 
+.contactSubHeading {
+  @include setFont(2.5rem, normal, $darkGrey, 1.5px);
+}
+
 .contactForm {
   @include setFlex(column, space-between, center);
 
   margin: 40px auto 0;
-  row-gap: 10px;
+  row-gap: 20px;
   width: 100%;
 }
 
@@ -40,7 +45,7 @@
   border-bottom: 1px solid $darkGrey;
   border-radius: 0;
   line-height: 1.6;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   outline: none;
   padding: 10px;
   width: 100%;
@@ -64,6 +69,41 @@
 .formSubmitButton:hover {
   border-color: $darkGrey;
   outline: none;
+}
+
+.credits {
+  margin-top: 50px;
+}
+
+.creditsTitle {
+  @include setFont(1.6rem, bold, $darkGrey, 1.5px);
+
+  cursor: pointer;
+  margin-bottom: 40px;
+}
+
+.credit {
+  @include setFont(1.2rem, normal, $darkGrey, 1.5px);
+
+  margin-bottom: 20px;
+}
+
+.creditLink {
+  color: $darkGrey;
+  text-decoration: underline;
+}
+
+.creditList {
+  font-size: 1.2rem; 
+  height: 150px;
+  transition: $standardTransition;
+}
+
+.hideList {
+  font-size: 0rem;
+  height: 0px;
+  opacity: 0;
+  overflow: hidden;
 }
 
 @media (max-width: 500px) {
