--- a/styles/sass/partials/_skills.scss
+++ b/styles/sass/partials/_skills.scss
@@ -95,3 +95,14 @@
   color: $githubColor;
 }
 
+.skillTesting:hover {
+  color: $testingColor;
+}
+
+.skillMERN:hover {
+  color: $mernColor;
+}
+
+.skills .subSectionHeading {
+  margin-top: 50px;
+}
